# be18-fin-SYNERGY-ORDER101

./: .gitignore  README.md  appspec.yml  docker-compose.yml
python-server/: .dockerignore  .gitignore  Dockerfile  appspec.yml  buildspec.yml  pyproject.toml
python-server/app/: db.py  main.py  schemas.py
python-server/app/chat/: config.py  engine.py  prompts.py  retrieval.py  router.py
python-server/app/data_pipeline/: 00_generate_sku_catalog.py  00a_generate_sku_catalog_ml.py  00a_make_weekly_sales_from_domain_sku.py  00b_generate_sku_catalog_ml_from_00.py  00b_make_taxonomy_from_sku_catalog.py  00c_make_taxonomy_catalog.py  01_generate_base_share.py  01_preprocess_domain_mapping.py  01c_filter_domain_by_catalog.py  02_expand_sku_from_category.py  02_generate_synthetic_weather.py  03_generate_category_sales.py  03_make_hq_weekly.py  04_generate_sku_sales.py  04_split_hq_into_virtual_stores.py  05_generate_weekly_sales.py  05_make_features.py  06_export_to_demand_forecast.py  (+19 more)
python-server/export_csv/: check.py  prepare_data.py
python-server/knowledge/: ai.json  franchise_delivery.json  order.json  system.json  warehouse_inventory_product.json
python-server/notebooks/: 01_eda.ipynb  01_eda_and_model_experiments.ipynb  AI_model_v1.ipynb  AI_model_v2.1.ipynb  AI_model_v2.ipynb  AI_model_v3.ipynb  EDA.ipynb  EDA_detail.ipynb  demand_forecast_train.ipynb  eda_and_baseline_modeling.ipynb  model_overfit_check.ipynb  model_visualize.ipynb  test.ipynb  test_2025.ipynb  잔차분석.ipynb
python-server/scripts/: after_install.sh  before_install.sh  start.sh  stop.sh
(+369 files in other folders)
