[tool.poetry]
name = "python-server"
version = "0.1.0"
description = "ORDER101 프로젝트의 백엔드 Python 서버"
authors = ["sangwon5579 <chosw0410@naver.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"
requests = "^2.32.5"
pandas = "^2.3.3"
numpy = "^2.3.4"
python-dateutil = "^2.9.0.post0"
lightgbm = "^4.6.0"
scikit-learn = "^1.7.2"
python-dotenv = "^1.2.1"
pymysql = "^1.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
